--- a/src/main.scss
+++ b/src/main.scss
@@ -4,3 +4,8 @@
 // import components
 @use 'scss/components/header';
 @use 'scss/components/model';
+@use 'scss/components/nav';
+@use 'scss/components/toggle';
+@use 'scss/components/destinations';
+// import layout
+@use 'scss/layout/layout';
