--- a/src/scss/components/_model.scss
+++ b/src/scss/components/_model.scss
@@ -4,6 +4,7 @@
   @include abstracts.position(fixed, 0, 0, 0, 0, 100%, 100%);
   @include abstracts.align(flex, center, center, auto);
   background: rgba($color: #000000, $alpha: 0.4);
+  z-index: 6;
   &__heading {
     h3 {
       font-size: 2rem;
