--- a/src/scss/utils/_utils.scss
+++ b/src/scss/utils/_utils.scss
@@ -57,3 +57,12 @@
 .y-center {
   align-items: center;
 }
+.p-15 {
+  padding: 1.5rem;
+}
+.mr-minus-15 {
+  margin-right: -1.5rem;
+}
+.ml-minus-15 {
+  margin-left: -1.5rem;
+}
